crates/review-buddy/tests/snapshots/first_run__tour_160x40_dusk.snap
---
source: crates/review-buddy/tests/first_run.rs
expression: "tour(160, 40, \"dusk\")"
---
 review buddy  ·  first run                                                                                                                                Dusk













                                         ╭ Getting started ───────────────────────────────────────────────────────────╮
                                         │ Welcome to Review Buddy.                                                   │
                                         │ Every pull and merge request, in one quiet queue.                          │
                                         │                                                                            │
                                         │ Let's connect the accounts you already use. It takes about a minute, and   │
                                         │ nothing is saved until you say so.                                         │
                                         │                                                                            │
                                         │ Found 2 places you might want to connect.                                  │
                                         │                                                                            │
                                         │ [ Continue ⏎ ]  [ Skip for now · esc ]                                     │
                                         ╰────────────────────────────────────────────────────────────────────────────╯














 ⏎ continue  space pick  esc skip for now
=====
 review buddy  ·  first run                                                                                                                                Dusk













                                         ╭ 1 · Connect your sources ──────────────────────────────────────────────────╮
                                         │ space picks a row · ⏎ continues · a row with no credentials asks for a     │
                                         │ token                                                                      │
                                         │                                                                            │
                                         │   [x] ✓ GH github.com  signed in as smorris via gh · 2 orgs                │
                                         │ › [x] ○ GL gitlab.work.ca  found in your git config, no credentials yet…   │
                                         │       Token  ••••••••••••▏                                                 │
                                         │       Needs api, read_user · ⏎ test and save to your keyring · esc cancel  │
                                         │                                                                            │
                                         │ [ Back ]  [ Continue ⏎ ]  [ Skip for now · esc ]                           │
                                         ╰────────────────────────────────────────────────────────────────────────────╯














 ⏎ continue  space pick  esc skip for now
=====
 review buddy  ·  first run                                                                                                                                Dusk














                                         ╭ 2 · What to include ───────────────────────────────────────────────────────╮
                                         │ Pick what each account covers. Leave everything unticked to include        │
                                         │ everything you can see.                                                    │
                                         │                                                                            │
                                         │ › [x] github.com · my own repositories                                     │
                                         │   [ ] github.com · org liminal-hq                                          │
                                         │   [ ] github.com · org acme                                                │
                                         │                                                                            │
                                         │ [ Back ]  [ Continue ⏎ ]  [ Skip for now · esc ]                           │
                                         ╰────────────────────────────────────────────────────────────────────────────╯














 ⏎ continue  space pick  esc skip for now
=====
 review buddy  ·  first run                                                                                                                      Afterglow Dark














                                         ╭ 3 · Pick a look ───────────────────────────────────────────────────────────╮
                                         │ ← → changes the screen live. You can change it later with T.               │
                                         │                                                                            │
                                         │   Liminal HQ       ██ ██ ██ ██                                             │
                                         │   Dusk             ██ ██ ██ ██                                             │
                                         │ › Afterglow Dark   ██ ██ ██ ██                                             │
                                         │   Afterglow Light  ██ ██ ██ ██                                             │
                                         │                                                                            │
                                         │ [ Back ]  [ Continue ⏎ ]  [ Skip for now · esc ]                           │
                                         ╰────────────────────────────────────────────────────────────────────────────╯














 ⏎ continue  space pick  esc skip for now
=====
 review buddy  ·  first run                                                                                                                      Afterglow Dark















                                         ╭ 4 · A little company ──────────────────────────────────────────────────────╮
                                         │ Jax is a small otter who keeps you company in a corner of the screen. He   │
                                         │ stays out of the way.                                                      │
                                         │                                                                            │
                                         │ [x] Keep Jax around  (J or space)                                          │
                                         │                                                                            │
                                         │ [ Back ]  [ Continue ⏎ ]  [ Skip for now · esc ]                           │
                                         ╰────────────────────────────────────────────────────────────────────────────╯















 ⏎ continue  space pick  esc skip for now
=====
 review buddy  ·  first run                                                                                                                      Afterglow Dark














                                         ╭ 5 · Ready to save ─────────────────────────────────────────────────────────╮
                                         │ Here's what will be saved:                                                 │
                                         │                                                                            │
                                         │   github.com (smorris) · my repositories                                   │
                                         │                                                                            │
                                         │ Look: Afterglow Dark · Jax around                                          │
                                         │ Config: /home/u/.config/review-buddy/config.toml                           │
                                         │                                                                            │
                                         │ [ Back ]  [ Save ⏎ ]  [ Skip for now · esc ]                               │
                                         ╰────────────────────────────────────────────────────────────────────────────╯














 ⏎ continue  space pick  esc skip for now
